kuber/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: farmer-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: farmer-dashboard
  template:
    metadata:
      labels:
        app.kubernetes.io/name: farmer-dashboard
    spec:
      containers:
        - name: farmer-container
          image: nginx:1.14.2
          imagePullPolicy: Always
          volumeMounts:
            # name must match the volume name below
            - name: secret-volume
              mountPath: /etc/secret-volume
              readOnly: true
          ports:
            - containerPort: 80
              name: farmer-port
      volumes:
        - name: secret-volume
          secret:
            secretName: farm-secret
